# netcord

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  netcord.spec  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
media/: README.md
src/netcord/: app.py  constants.py  core.py  utils.py
src/netcord/pages/: __init__.py  configure.py  dashboard.py  diagnostics.py  profiles.py
src/netcord/widgets/: __init__.py  action_button.py  card.py  danger_button.py  ip_entry.py  section_label.py  sidebar_button.py  status_badge.py  toast.py
tests/: test_core.py  test_utils.py
